syntax = "proto3";

import "transfer.proto";

option java_multiple_files = true;
option java_package = "com.xforceplus.ultraman.oqsengine.sdk";
option java_outer_classname = "EntityRebuildResourceProto";


service EntityRebuildService {

    rpc rebuildIndex ( RebuildRequest ) returns ( RebuildTaskInfo );

    rpc showProgress ( ShowTask ) returns (stream RebuildTaskInfo );

    rpc listActiveTasks ( QueryPage ) returns ( stream RebuildTaskInfo );

    rpc getActiveTask ( EntityUp ) returns ( RebuildTaskInfo );

    rpc listAllTasks ( QueryPage ) returns ( stream RebuildTaskInfo );

    rpc cancelTask ( ShowTask ) returns ( RebuildTaskInfo );

    rpc entityRepair ( EntityUpList ) returns ( OperationResult );

    rpc cancelEntityRepair ( RepairRequest ) returns ( OperationResult );

    rpc clearRepairedInfos ( RepairRequest ) returns ( OperationResult );

    rpc repairedInfoList ( RepairRequest ) returns ( stream RebuildTaskInfo );

    rpc isEntityRepaired ( RepairRequest ) returns ( OperationResult );

    rpc removeCommitIds ( RepairRequest ) returns ( OperationResult );

    rpc initNewCommitId ( RepairRequest ) returns ( OperationResult );

    rpc cdcSendErrorRecover ( CdcRecoverSubmit ) returns ( OperationResult );

    rpc cdcRecoverOk ( CdcRecover ) returns ( OperationResult );

    rpc queryCdcError ( CdcErrorCond ) returns ( stream CdcErrorTaskInfo );

    rpc rangeOfCommits ( CommitIdUp ) returns ( CommitIdMaxMin );

    rpc cleanLessThan ( CommitIdUp ) returns ( OperationResult );
}

message QueryPage {
   int32 size = 1;
   int32 number = 2;
}

message ShowTask {
    int64 id = 1;
}

message EntityUpList {
    repeated EntityUp ups = 1;
}

message RebuildRequest {
    EntityUp entity = 1;
    string start = 2;
    string end = 3;
}

message RebuildTaskInfo {
    int64 tid = 1;
    bool isDone = 2;
    bool isCancel = 3;
    int32 percentage = 4;
    string status = 5;
    int64 entityId = 6;
    int64 starts = 7;
    int64 ends = 8;
    int32 batchSize = 9;
    int32 finishSize = 10;
    string errCode = 11;
    string message = 12;
}

message RepairRequest {
    repeated int64 rid = 1;
}

message CdcErrorTaskInfo {
    int64 seqNo = 1;
    int64 batchId = 2;
    int64 id = 3;
    int64 entity = 4;
    int32 version = 5;
    int32 op = 6;
    int64 commitId = 7;
    int32 errorType = 8;
    int32 status = 9;
    string operationObject = 10;
    int64 executeTime = 11;
    int64 fixedTime = 12;
    string message = 13;
}

message CdcErrorCond {
    int64 seqNo = 1;
    int64 batchId = 2;
    int64 id = 3;
    int64 entity = 4;
    int32 status = 5;
    bool equalStatus = 7;
    int32 type = 7;
    int64 rangeLEExecuteTime = 8;
    int64 rangeGeExecuteTime = 9;
    int64 rangeLEFixedTime = 10;
    int64 rangeGeFixedTime = 11;
}

message CdcRecover {
    int64 seqNo = 1;
}

message CdcRecoverSubmit {
    int64 seqNo = 1;
    string recoverObjectString = 2;
}

message CommitIdUp {
    int64 commitId = 1;
}

message CommitIdMaxMin {
    int64 max = 1;
    int64 min = 2;
}